# ManufactureLine_BMSTU_SM7

./: .gitignore  README.md
polygon_ws/src/interfaces/msg/: LampMsg.msg  PalletizerMsg.msg
polygon_ws/src/polygon_controller/: CMakeLists.txt  package.xml
polygon_ws/src/polygon_controller/dependencies/LowLevelController/include/: AngleManipulatorController.h  LampController.h  LowLevelController.h  PalletizerController.h  UDPSocket.h
polygon_ws/src/polygon_controller/dependencies/LowLevelController/src/: AngleManipulatorController.cpp  PalletizerController.cpp  UDPSocket.cpp
polygon_ws/src/polygon_controller/src/: config.json  controller.cpp
polygon_ws/src/publisher/: package.xml
polygon_ws/src/publisher/src/: publisher_node.cpp
polygone_ws/src/poligon_controller/: CMakeLists.txt  package.xml
polygone_ws/src/poligon_controller/src/: controller.cpp
polygone_ws/src/publisher/: CMakeLists.txt
src/interfaces/: CMakeLists.txt  package.xml
src/interfaces/msg/: AngleManipulatorMsg.msg
src/poligon_controller/dependencies/LowLevelController/: CMakeLists.txt
src/poligon_controller/dependencies/LowLevelController/include/: LowLevelController.h  UDPSocket.h
src/poligon_controller/dependencies/LowLevelController/src/: LampController.cpp
src/poligon_controller/src/: controller.cpp
src/publisher/src/: publisher_node.cpp
